# CoinDataFetcherUI

./: .gitignore  CMakeLists.txt
include/: page_handler.hpp
src/: main.cpp  page_handler.cpp
static/: backtest.html  datasave.html  index.html  realtimetrade.html
